--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
+    "hast-util-find-and-replace": "^4.1.2",
+    "mdast-util-find-and-replace": "^2.2.1",
     "next": "12.2.5",
+    "node-html-parser": "5.4.2-0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "remark-twemoji": "^0.1.1",
+    "swr": "^1.3.0",
+    "tailwind-merge": "^1.5.1",
+    "twemoji": "^14.0.2",
+    "twemoji-parser": "^14.0.0"
   },
   "devDependencies": {
+    "@ariesclark/eslint-config": "^1.4.0",
     "@types/node": "18.7.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/twemoji": "^13.1.2",
+    "@types/twemoji-parser": "^13.1.1",
+    "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
 }
