--- a/package.json
+++ b/package.json
@@ -9,32 +9,50 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
+    "@google-cloud/storage": "^6.4.1",
+    "@heroicons/react": "^2.0.8",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.2.1",
+    "argon2": "^0.29.1",
+    "cookie": "^0.5.0",
+    "formidable": "^2.0.1",
     "hast-util-find-and-replace": "^4.1.2",
+    "jotai": "^1.8.2",
     "mdast-util-find-and-replace": "^2.2.1",
+    "mdast-util-from-markdown": "^1.2.0",
+    "net": "^1.0.2",
     "next": "12.2.5",
     "node-html-parser": "5.4.2-0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "remark-twemoji": "^0.1.1",
+    "sharp": "^0.30.7",
     "swr": "^1.3.0",
-    "tailwind-merge": "^1.5.1",
+    "tailwind-merge": "^1.6.0",
+    "tokenizr": "^1.6.7",
     "twemoji": "^14.0.2",
-    "twemoji-parser": "^14.0.0"
+    "twemoji-parser": "^14.0.0",
+    "unified": "^10.1.2",
+    "unist-builder": "^3.0.0",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@ariesclark/eslint-config": "^1.4.0",
-    "@types/node": "18.7.5",
+    "@types/cookie": "^0.5.1",
+    "@types/formidable": "^2.0.5",
+    "@types/node": "18.7.14",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/sharp": "^0.30.5",
     "@types/twemoji": "^13.1.2",
     "@types/twemoji-parser": "^13.1.1",
     "autoprefixer": "^10.4.8",
-    "eslint": "8.22.0",
+    "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "postcss": "^8.4.16",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.8.2"
   }
 }
